--- a/notebooks/catgen.ipynb
+++ b/notebooks/catgen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,25 +28,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## S3 Access"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import boto3\n",
+    "from sagemaker import get_execution_role"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "role = get_execution_role()\n",
+    "bucket='devopstar'\n",
+    "data_key = 'resources/aws-catgen/models/karras2019stylegan-cats-256x256.pkl'\n",
+    "\n",
+    "s3 = boto3.resource('s3')\n",
+    "with open('karras2019stylegan-cats-256x256.pkl', 'wb') as data:\n",
+    "    s3.Bucket(bucket).download_fileobj(data_key, data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Testing GPU"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['/device:GPU:0']"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tensorflow.python.client import device_lib\n",
     "\n",
@@ -61,12 +82,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Init and open pickle file"
+    "## Init and Open Pickle file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate Cats"
+    "## Generate Cat"
    ]
   },
   {
@@ -102,13 +123,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for ii in range(0,10000):\n",
-    "    rnd = np.random.RandomState(random.randrange(0,5000))\n",
-    "    latents = rnd.randn(1, Gs.input_shape[1])\n",
-    "    fmt = dict(func=tflib.convert_images_to_uint8, nchw_to_nhwc=True)\n",
-    "    images = Gs.run(latents, None, truncation_psi=0.5, randomize_noise=True, output_transform=fmt)\n",
-    "    img = Image.fromarray(images[0])\n",
-    "    scipy.misc.imsave(f\"gencat/cat{ii}.jpg\",img)\n",
+    "rnd = np.random.RandomState(random.randrange(0,5000))\n",
+    "latents = rnd.randn(1, Gs.input_shape[1])\n",
+    "fmt = dict(func=tflib.convert_images_to_uint8, nchw_to_nhwc=True)\n",
+    "images = Gs.run(latents, None, truncation_psi=0.5, randomize_noise=True, output_transform=fmt)\n",
+    "img = Image.fromarray(images[0])\n",
     "display(img)"
    ]
   }
@@ -129,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
